--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,11 @@
         "kartik-v/yii2-icons": "@dev",
         "kartik-v/yii2-widget-select2": "dev-master",
         "kartik-v/yii2-widget-fileinput": "@dev",
-        "kartik-v/yii2-widget-sidenav": "*"
+        "kartik-v/yii2-widget-sidenav": "*",
+        "kartik-v/yii2-export": "@dev",
+        "kartik-v/yii2-mpdf": "*",
+        "kartik-v/yii2-grid": "@dev",
+        "yii2tech/spreadsheet": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
