--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,7 @@
         "codeception/module-filesystem": "^1.0",
         "phpunit/phpunit": "~5.7.27 || ~6.5.5",
         "codeception/verify": "~0.5.0 || ~1.1.0",
-        "symfony/browser-kit": ">=2.7 <=4.2.4",
-        "kartik-v/yii2-mpdf": "dev-master"
+        "symfony/browser-kit": ">=2.7 <=4.2.4"
     },
     "config": {
         "process-timeout": 1800,
