--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "philippfrenzel/yii2fullcalendar":"*",
+        "philippfrenzel/yii2fullcalendar":"~3.9.0",
         "2amigos/yii2-tinymce-widget" : "~1.1",
         "kartik-v/yii2-widget-datepicker": "dev-master",
         "kartik-v/yii2-widget-datetimepicker": "*",
