--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,9 @@
         "yii2tech/spreadsheet": "*",
         "2amigos/yii2-translateable-behavior" : "~1.1",
         "codemix/yii2-localeurls": "^1.7",
-        "onmotion/yii2-widget-apexcharts": "^1.0"
+        "onmotion/yii2-widget-apexcharts": "^1.0",
+        "coderius/yii2-hit-counter": "1.0.2.2",
+        "kartik-v/yii2-editable": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
